[Cleanup][content-visibility] Fix unintentional committed change at 286858@main https://bugs.webkit.org/show_bug.cgi?id=283460

Reviewed by Antti Koivisto.

* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjust const):

Canonical link: https://commits.webkit.org/286903@main